FIX: Update css to make sure only one image on smaller screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -308,9 +308,9 @@ footer {
 }
   
 
-@media screen and (min-width: 375px) {
-    .logo img:nth-child(n+2){
-        display: none;
+@media screen and (max-width: 425px) {
+    #image2, #image3{
+        display: none !important;
     }
 }
 
