--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -308,7 +308,7 @@ footer {
 
 @media screen and (max-width: 425px) {
     #image2, #image3{
-        display: none;
+        display: none !important;
     }
 }
 
